---
config:
  layout: elk
---
classDiagram
direction TB
    class Giocatore {
	    -vita : int
	    -fame : int
	    -mente : int
        -sprite : ImageIcon
	    +attacca() int
	    +utilizzaAbilita()*
	    +utilizzaOggetto(ogg : Oggetto)
	    +muovi()
	    +cura(cura : int)
	    +subisciDanno(danno : int)
	    +perdiMente(perdita : int)
	    +guadagnaMente(mente : int)
        +setOggetto(oggetto : OggettoEquipaggiabile)
        +getOggetto(tipo : TipoOggettoEquipaggiabile) OggettoEquipaggiabile
    }

    class Inventario {
	    +aggiungiOggetto(ogg : Oggetto)
	    +togliOggetto() Oggetto
	    +getOggetti() ArrayList~Oggetto~
    }

    class Oggetto {
	    -nome : String
	    -img : ImageIcon
	    +Oggetto(nome : String, img : ImageIcon)
	    +getNome() String
	    +getImg() ImageIcon
    }

    class Party{
        +aggiungiMembro(giocatore : Giocatore)
        +rimuoviMembro(giocatore : Giocatore)
        +getParty() ArrayList~Giocatore~
        +getInventarioConsumabili() InventarioConsumabili
	    +getInventarioEquipaggiabili() InventarioEquipaggiabili
        +cambiaOggetto(giocatore : Giocatore, oggetto : OggettoEquipaggiabile)
    }

    class InventarioEquipaggiabili {
    }

    class InventarioConsumabili {
    }

    class Mercenario {
      +utilizzaAbilita()
    }

    class Cavaliere {
      +utilizzaAbilita()
    }

    class Necromante {
      +utilizzaAbilita()
    }

    class Vichingo {
      +utilizzaAbilita()
    }

    class OggettoEquipaggiabile {
    }

    class OggettoConsumabile {
    }

    class TipoOggettoEquipaggiabile{
        <<Enum>>
        DIFENSIVO 
        OFFENSIVO
    }

    class TipoOggettoEquipaggiabile{
        <<Enum>>
        COMMESTIBILE 
        CURATIVO 
        MENTALE
    }

    class Nemico{
      <<abstract>>
    }

    class GestoreGioco{
        -posizione : int[]
        +GestoreGioco(party : Party, mappa : Mappa)
        +muovi(int x, int y)
        +controllaEvento()
        +iniziaCombattimento()
        +apriInventario()
        +trovaOggetto()
        +trovaAlleato()
    }

    class Mappa{

    }

    class GestoreInput{

    }

    class GestoreCombattimento{
        +iniziaCombattimento(party : Party, nemico : Nemico)
    }

    class Eventi{
        <<Enum>>
        NEMICO
        OGGETTO
        ALLEATO
    }

    class GeneratoreMappa{
        +generaMappa()$
    }

	<<abstract>> Giocatore
	<<abstract>> Inventario
	<<abstract>> Oggetto

    Inventario <|-- InventarioEquipaggiabili
    Inventario <|-- InventarioConsumabili
    Giocatore <|-- Mercenario
    Giocatore <|-- Cavaliere
    Giocatore <|-- Necromante
    Giocatore <|-- Vichingo
    Oggetto <|-- OggettoEquipaggiabile
    Oggetto <|-- OggettoConsumabile
    Party "1" --> "1" InventarioConsumabili : -consumabili
    Party "1" --> "1" InventarioEquipaggiabili : -equipaggiabili
    InventarioConsumabili "1" --> "n" OggettoConsumabile : -consumabili
    InventarioEquipaggiabili "1" --> "n" OggettoEquipaggiabile : -equipaggiabili
    GestoreGioco "1" --> "1" Party : -party
    Party "1" --> "1...4" Giocatore : -giocatori
    GestoreInput "1" --> "1" GestoreGioco : -gestoreGioco
    GestoreInput "1" --> "1" GestoreCombattimento : -gestoreCombattimento
    GestoreCombattimento "1" <-- GestoreGioco : -gestoreCombattimento
    GestoreGioco "1" --> "1" Mappa : -mappa
    Giocatore "1" --> "1" OggettoEquipaggiabile : -oggettoDifensivo
    Giocatore "1" --> "1" OggettoEquipaggiabile : -oggettoOffensivo
    GeneratoreMappa "1" ..> "1" Mappa